arkts_static_test/08_Statements/ets_cases/8.14_throw_Statements/compile-fail/STM_08_14_006_FAIL_throw_null.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id STM_08_14_006_FAIL_throw_null
 * @expect compile-fail
 * @section 8.14
 * @design 测试抛出null，验证null不允许抛出导致编译错误
 * @note null不能作为throw表达式，应产生编译时错误
 */

function testThrowNull(): void {
    throw null;
}
